Fix user list overflow

--- a/frontend/src/styles/components.module.css
+++ b/frontend/src/styles/components.module.css
@@ -97,7 +97,6 @@ Button:hover {
   display: flex;
   flex-direction: column;
   width: 75%;
-  height: 100px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 3%;
